fix(): add text align helper classes back after bootstrap removal, fix table alignment

--- a/src/vuestic-theme/vuestic-sass/global/_typography.scss
+++ b/src/vuestic-theme/vuestic-sass/global/_typography.scss
@@ -214,6 +214,10 @@ ol.va-ordered {
     border-bottom: 2px solid $vue-darkest-blue;
   }
 
+  td {
+    vertical-align: middle;
+  }
+
   &.striped {
     tr {
       &:nth-child(even) {
